# Cancer-Net-PCa-MultiSeg

./: .gitignore  CancerNetPCaSeg.py  README.md  dataset.py  evaluate.py  pyproject.toml  requirements.txt  train.py
cancernet_pca/config/: config.py
cancernet_pca/evaluation/: evaluator.py
cancernet_pca/models/: model_factory.py
cancernet_pca/training/: trainer.py
cancernet_pca_seg/: __init__.py
cancernet_pca_seg/config/: config.py
cancernet_pca_seg/data/: __init__.py  dataset.py
cancernet_pca_seg/evaluation/: __init__.py  ensembler.py  evaluator.py
cancernet_pca_seg/models/: model_factory.py
cancernet_pca_seg/training/: __init__.py  optimizer.py  trainer.py
cancernet_pca_seg/utils/: io.py
models/: model_factory.py
scripts/: ensemble.py  train.py  visualize_model.py
scripts/benchmarks/: lesion_multi.sh  lesion_single.sh  prostate_multi.sh  prostate_single.sh
scripts/inference/: ensemble_lesion_multi.sh  ensemble_lesion_single.sh  ensemble_prostate_multi.sh  ensemble_prostate_single.sh
utils/: config.py  data_helpers.py  data_utils.py  dataset.py  eval_helpers.py  initialize.py  optimizer.py  train_helpers.py
