[tool.poetry]
name = "cancernet-pca"
version = "2.0.0"
description = "Cancer-Net-PCa Segmentation"
packages = [{include = "cancernet_pca_seg"}]

[tool.poetry.dependencies]
python = ">=3.9"
torch = "2.4.1"
torchvision = "0.19.1"
monai = "1.3.2"
numpy = ">=1.26.0"
scikit-learn = "1.3.2"
SimpleITK = "2.5.0"
einops = "^0.8.1"
pandas = ">=2.0.0,<2.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"